# adventofcode-2020

./: README.md
01/: main.cabal
01/src/: Main.hs  Part1.hs  Part2.hs
02/: main.cabal
02/src/: Main.hs  Part1.hs  Part2.hs
03/: main.cabal  stack.yaml
03/src/: Main.hs  Part1.hs  Part2.hs
04/src/: Main.hs  Part1.hs  Part2.hs
05/: main.cabal
05/src/: Main.hs  Part1.hs  Part2.hs
06/src/: Main.hs  Part1.hs  Part2.hs
07/: main.cabal
07/src/: Main.hs  Part1.hs  Part2.hs
08/src/: Main.hs  Part1.hs  Part2.hs
09/src/: Main.hs  Part1.hs  Part2.hs
10/src/: Main.hs  Part1.hs  Part2.hs
11/: main.cabal
11/src/: Main.hs  Part1.hs  Part2.hs
12/: output.txt
12/src/: Main.hs  Part1.hs  Part2.hs
13/: main.cabal
13/src/: Part1.hs  Part2.hs
14/: main.cabal
14/src/: Part1.hs  Part2.hs
15/: input.txt  main.cabal
15/src/: Part1.hs  Part2.hs
16/src/: Part1.hs  Part2.hs
17/src/: Part1.hs  Part2.hs
18/: main.cabal
18/src/: Part1.hs  Part2.hs
19/: main.cabal
19/src/: Part1.hs  Part2.hs
20/: main.cabal
20/src/: Part1.hs  Part2.hs
21/src/: Part1.hs  Part2.hs
22/src/: Part1.hs  Part2.hs
23/src/: Part1.hs  Part2.hs
24/src/: Part1.hs  Part2.hs
25/src/: Part1.hs
