cabal-version:  2.2
name: main
version: 0.0.1
build-type:          Simple

common common-all
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -O2
  build-depends:
      base == 4.*,
      split == 0.2.*,
      containers == 0.6.*,
      regex-tdfa == 1.3.*,
      text == 1.2.*,
      array == 0.5.*

executable part1 
  import: common-all
  main-is: Part1.hs
  ghc-options: -main-is Part1

executable part2
  import: common-all
  main-is: Part2.hs
  ghc-options: -main-is Part2

